--- a/requirements.txt
+++ b/requirements.txt
@@ -65,10 +65,12 @@ pandocfilters==1.5.1
 parso==0.8.4
 pillow==11.3.0
 platformdirs==4.3.8
+polars==1.32.3
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
 pure_eval==0.2.3
+pyarrow==21.0.0
 pycparser==2.22
 Pygments==2.19.2
 pyparsing==3.2.3
@@ -98,6 +100,7 @@ terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250809
 typing_extensions==4.14.1
